--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,17 @@ SC3.Rmd
 SC4.Rmd
 SC5.Rmd
 SC6.Rmd
+SC7.Rmd
+SC8.Rmd
+SC9.Rmd
+.Rhistory
+SC.html
+SC2.html
+SC3.html
+SC4.html
+SC5.html
+SC6.html
+SC7.html
+SC8.html
+SC9.html
+
